// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/passwordInput renders the input 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <label
      class="label"
      for="passwordInput"
    >
      Item Label
    </label>
    <input
      class="input"
      data-testid="passwordInput"
      id="passwordInput"
      placeholder="Password Input"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`components/passwordInput sets the width inline styles when passed 1`] = `
<div>
  <div
    class="inputContainer"
    style="width: 100px;"
  >
    <label
      class="label"
      for="passwordInput"
    >
      Item Label
    </label>
    <input
      class="input"
      data-testid="passwordInput"
      id="passwordInput"
      placeholder="Password Input"
      type="text"
      value=""
    />
  </div>
</div>
`;
